// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JetpackConnectNotices Should render non-terminal notice if callback supplied 1`] = `
<div>
  <div
    class="jetpack-connect__notices-container"
  >
    <div
      aria-label="Notice"
      class="calypso-notice is-warning"
      role="status"
    >
      <span
        class="calypso-notice__icon-wrapper"
      >
        <span
          class="calypso-notice__icon-wrapper-drop"
        />
        <svg
          class="gridicon gridicons-notice calypso-notice__icon"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="gridicons.svg#gridicons-notice"
          />
        </svg>
      </span>
      <p
        class="calypso-notice__content"
      >
        <span
          class="calypso-notice__text"
        >
          In some cases, authorization can take a few attempts. Please try again.
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`JetpackConnectNotices Should render notice 1`] = `
<div>
  <div
    class="jetpack-connect__notices-container"
  >
    <div
      aria-label="Notice"
      class="calypso-notice is-error"
      role="status"
    >
      <span
        class="calypso-notice__icon-wrapper"
      >
        <span
          class="calypso-notice__icon-wrapper-drop"
        />
        <svg
          class="gridicon gridicons-notice calypso-notice__icon"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="gridicons.svg#gridicons-notice"
          />
        </svg>
      </span>
      <p
        class="calypso-notice__content"
      >
        <span
          class="calypso-notice__text"
        >
          This site can't be connected to WordPress.com because it violates our {{a}}Terms of Service{{/a}}.
        </span>
      </p>
    </div>
  </div>
</div>
`;
